:iphone: fix horizontal scroll on iphone

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -5,11 +5,12 @@ header{
   top: 0;
   background-color: $blue_400;
   border-radius: 0 0 20px 20px;
-  position: sticky;
+  position: fixed;
   filter: drop-shadow( 0px 12px 24px $shadow);
-
+  margin-top: 80px;
   @include m{
     background-color: unset;
+    margin-top: 56px;
   }
 
   label{
